name:                api
version:             0.1.0.0
synopsis:            Api for the investments-info data
-- description:
license:             BSD3
license-file:        LICENSE
author:              Sasa Bogicevic
maintainer:          t4nt0r@protonmail.com
-- copyright:
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

executable api
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.11 && <4.12
                     , servant
  hs-source-dirs:      src
  ghc-options: -Wall
  default-language:    Haskell2010
